# AlphaZero

./: .gitignore  main.ipynb  pyproject.toml
alphazero/: MCTS.py  MCTS_batch.py  MCTS_multichild.py  TicTacToe.py  main.ipynb  main.py
alphazero/batching/: CPUPool.py  GameWorker.py  NodeBatch.py  main.py
alphazero/benchmarks/: benchmark_c4_multiV3_10sim_05work_100k  benchmark_c4_multiV3_10sim_10work_100k  benchmark_c4_multiV3_10sim_15work_100k  benchmark_c4_multichildV2_100sim_7work_100k  benchmark_c4_multichildV2_10sim_02work_100k  benchmark_c4_multichildV2_10sim_04work_100k  benchmark_c4_multichildV2_10sim_07work_100k  benchmark_c4_multichildV2_10sim_08work_100k  benchmark_c4_multichildV2_10sim_09work_100k  benchmark_c4_multichildV2_10sim_10work_100k  benchmark_c4_multichildV2_2sim_7work_100k  benchmark_c4_multichildV2_50sim_7work_100k  benchmark_c4_multichildV3_10sim_07work_100k  benchmark_multi_100k  benchmark_single_100k
alphazero/games/: ConnectFour.py  GameBase.py  GameStateBase.py  TicTacToe.py
