[project]
name = "mcts-tictactoe"
version = "0.1.0"
description = ""
authors = [
    {name = "Donren Leung",email = "donren.leung@gmail.com"}
]
license = {text = "GNU GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)"
    
]

[tool.mypy]
plugins = 'numpy.typing.mypy_plugin'

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
